@@ -5,20 +5,8 @@
 
 FBCALL void fb_ArrayResetDesc( FBARRAY *array )
 {
-	size_t i;
-    FBARRAYDIM *dim;
-
-    dim = &array->dimTB[0];
-
-    for( i = 0; i < array->dimensions; i++ )
-    {
-    	dim->elements = 0;
-    	dim->lbound = 0;
-    	dim->ubound = 0;
-    	++dim;
-    }
-
-    array->ptr = NULL;
-
-    FB_ARRAY_SETDESC( array, array->element_len, 0, 0, 0 );
+	array->data = NULL;
+	array->ptr = NULL;
+	array->size = 0;
+	memset( &array->dimTB[0], 0, array->dimensions * sizeof( FBARRAYDIM ) );
 }
