@@ -39,8 +39,9 @@ void fb_ArraySetDesc
     elements = fb_hArrayCalcElements( dimensions, &lbTB[0], &ubTB[0] );
     diff = fb_hArrayCalcDiff( dimensions, &lbTB[0], &ubTB[0] ) * element_len;
 
-    array->ptr = ptr;
-
-    FB_ARRAY_SETDESC( array, element_len, dimensions, elements * element_len, diff );
+	array->data = ((unsigned char *)ptr) + diff;
+	array->ptr = ptr;
+	array->size = elements * element_len;
+	array->element_len = element_len;
+	array->dimensions = dimensions;
 }
-
